Fixed layout issues with nav bar.

--- a/client/components/navbar/navbar.scss
+++ b/client/components/navbar/navbar.scss
@@ -13,6 +13,10 @@
   .navbar-nav {
     margin: 0;
     padding: 0;
+    
+    @media screen and (min-width: 1200px) {
+        float: none;
+    }
   }
 
   .navbar-nav i {
@@ -61,6 +65,11 @@
       &:hover i {
         margin-right: 25px;
       }
+    }
+    
+    @media screen and (min-width: 1200px) {
+        width: 23%;
+        padding-right: 0;
     }
   }
 
